<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <EditText
        android:id="@+id/culinary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/culinary_journey"
        android:textColorHint="#5C5C5C"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_rounded_corner"/>

    <EditText
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/favorite_recipes"
        android:textColorHint="#5C5C5C"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_rounded_corner"/>

    <EditText
        android:id="@+id/food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_philosophy"
        android:textColorHint="#5C5C5C"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_rounded_corner"/>

</LinearLayout>
